--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -1,11 +1,114 @@
 .history {
     display: flex;
     flex-wrap: wrap;
-    /* flex-direction: row; */
     justify-content: flex-start;
 }
 
 .history-element {
-    margin: 5px;
-    width: 250px;
+    /* margin: 25px 5px; */
+    margin-bottom: 25px;
+    font-family: sans-serif;
+    width: 24%;
+    /* padding */
+    margin: auto 0.5% 25px 0.5%;
+    background-color: lightgray;
+    text-align: center;
+}
+
+.history-element p {
+    margin: 5px auto;
+}
+
+.strong {
+    font-weight: bold;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.nav_item {
+    /* margin: 0 20px; */
+    padding: 15px 20px;
+    font-family: sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
+    color: white;
+    background-color: black;
+}
+
+.page_title {
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 1.5em;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.page_content {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 100px;
+    display: block;
+}
+
+form {
+    text-align: center;
+    width: 450px;
+    margin: 0 auto;
+    display: block;
+}
+
+form input {
+    border: 0;
+    border-bottom: 2px solid lightgray;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 1.2em;
+    width: 100%;
+}
+
+form button {
+    margin-top: 20px;
+    background-color: black;
+    color: white;
+    font-size: 1em;
+    text-transform: uppercase;
+    padding: 8px 15px;
+}
+
+form select {
+    color: gray;
+    border: 0;
+    border-bottom: 2px solid lightgray;
+    font-size: 1em;
+    width: 100%;
+}
+
+form input:focus, input:focus{
+    outline: none;
+}
+
+form .error-msg {
+    color: red;
+    font-size: 0.8em;
+    font-family: sans-serif;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+#bmi {
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+    font-size: 2em;
+    font-weight: bold;
+    color: black;
+    font-family: sans-serif;
 }
